Fix title on Safari

--- a/docusaurus/website/static/css/custom.css
+++ b/docusaurus/website/static/css/custom.css
@@ -23,6 +23,10 @@
   background: #282c34;
 }
 
+.headerTitleWithLogo {
+  white-space: nowrap;
+}
+
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
 }
 
